one of the ERROR strings does not need a colon
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65498 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasslibs_fr.po
+++ b/locale/po/grasslibs_fr.po
@@ -1909,7 +1909,7 @@ msgstr "ATTENTION : "
 #: ../lib/init/grass.py:130 ../lib/gis/parser.c:599
 #, fuzzy
 msgid "ERROR"
-msgstr "ERREUR: "
+msgstr "ERREUR"
 
 #: ../lib/init/grass.py:131
 #, fuzzy
