various typo fixes, found by the Debian lintian QA tool
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65575 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasswxpy_zh.po
+++ b/locale/po/grasswxpy_zh.po
@@ -3998,7 +3998,7 @@ msgstr "左上角行"
 
 #: ../gui/wxpython/rlisetup/wizard.py:676
 #: ../gui/wxpython/rlisetup/wizard.py:688
-msgid "Row lenght of sampling frame"
+msgid "Row length of sampling frame"
 msgstr "取样框架行长度"
 
 #: ../gui/wxpython/rlisetup/wizard.py:802
