various typo fixes, found by the Debian lintian QA tool (trunk, r65575)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@65576 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grassmods_pt.po
+++ b/locale/po/grassmods_pt.po
@@ -37836,7 +37836,7 @@ msgstr "Camada número"
 #, fuzzy
 msgid "For coor valid point/centroid, for length valid line/boundary"
 msgstr ""
-"Tipo dos elementos (coor para ponto/centróide válido, lenght para linha/"
+"Tipo dos elementos (coor para ponto/centróide válido, length para linha/"
 "contorno válido)"
 
 #: ../vector/v.to.db/parse.c:54
