--- a/locale/po/grasswxpy_it.po
+++ b/locale/po/grasswxpy_it.po
@@ -3887,7 +3887,7 @@ msgstr ""
 
 #: ../gui/wxpython/rlisetup/wizard.py:676
 #: ../gui/wxpython/rlisetup/wizard.py:688
-msgid "Row lenght of sampling frame"
+msgid "Row length of sampling frame"
 msgstr ""
 
 #: ../gui/wxpython/rlisetup/wizard.py:802
